# dbus-player-status

./: .flake8  LICENSE  README.md  pyproject.toml
dbus_player_status/: main.py
