[tool.poetry]
name = "dbus-player-status"
version = "0.1.0"
description = "Tool to extract media player status via DBus in JSON format"
authors = ["Tom Evans <tevans.uk@googlemail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
dbus-python = "^1.2.18"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8-black = "^0.2.4"
isort = "^5.10.1"
flake8-isort = "^4.1.1"
flake8 = "^4.0.1"
pytest = "^7.0.0"

[tool.poetry.scripts]
dbus-player-status = "dbus_player_status.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90
